# content-foundry

./: .env.example  .gitignore  .pre-commit-config.yaml  Human_Tasks.md  LICENSE  README.md  TECH_REPORT.md  Tutorial.md  Video_ideas.txt  protocol.md  pyproject.toml  requirements.txt
dashboard/: app.py
scripts/: init_db.py  seed_demo.py
spec/: 01-project-overview-goals.md  02-system-architecture.md  03-technology-stack-dependencies.md  04-full-file-directory-structure.md  05-database-schema.md  06-environment-variables-configuration.md  07-agent-1-data-fetcher.md  08-agent-2-script-generator.md  09-judge-agent.md  10-agent-4-voiceover-tts.md  11-agent-5-visuals-thumbnail.md  12-agent-6-video-renderer.md  13-agent-7-youtube-publisher.md  14-pipeline-orchestrator.md  15-prompt-library.md  16-template-definitions-all-6.md  17-cli-interface.md  18-scheduler.md  19-output-package-format-specification.md  20-human-review-dashboard.md  21-error-handling-strategy.md  22-testing-strategy.md  23-deployment-instructions.md  24-sample-output-examples.md  25-notifications-alerting.md  26-shorts-support.md  README.md
src/career_engine/: __init__.py  cli.py  config.py  errors.py  logging.py  scheduler.py
src/career_engine/agents/: data_fetcher.py  judge.py  publisher.py  renderer.py  script_generator.py  voiceover.py
src/career_engine/datasources/: adzuna.py  base.py  bls.py  news.py
src/career_engine/models/: __init__.py  data_brief.py  run.py  script.py  signals.py  video.py  visuals.py  voiceover.py
src/career_engine/notifications/: __init__.py  credit_monitor.py  telegram.py
src/career_engine/persistence/: __init__.py  repository.py
src/career_engine/pipeline/: artifacts.py  orchestrator.py  package.py  stages.py
src/career_engine/production/: __init__.py  captions.py  seo.py  timebox.py  timeline.py
src/career_engine/prompts/: script_generator.system.txt
src/career_engine/providers/: __init__.py  anthropic_provider.py  broll.py  fallback.py  image.py  local_provider.py  render_backend.py  tiering.py  tts.py
src/career_engine/safeguards/: grounding.py
src/career_engine/templates/: __init__.py
src/content_foundry/: __init__.py  cli.py  config.py  errors.py  logging.py
src/content_foundry/agents/: __init__.py  brainstorm.py  broll_director.py  data_fetcher.py  distill.py  idea_miner.py  judge.py  judge_checks.py  publisher.py  renderer.py  research.py  scene_image_director.py  script_generator.py  thumbnail_director.py  visuals.py  voiceover.py
src/content_foundry/datasources/: __init__.py  layoffs.py  registry.py  search.py
src/content_foundry/models/: __init__.py  ideas.py  judge_report.py  provenance.py  publish.py  research.py  script.py  visuals.py
src/content_foundry/notifications/: base.py  credit_monitor.py  factory.py
src/content_foundry/persistence/: db.py  repository.py  schema.py
src/content_foundry/pipeline/: __init__.py  artifacts.py  orchestrator.py  package.py
src/content_foundry/production/: affiliate.py  captions.py  end_screen.py  like_nudge.py  overlay.py  seo.py  sound_design.py  subscribe.py  timebox.py  timeline.py
src/content_foundry/prompts/: __init__.py  affiliate_queries.system.txt  brainstorm.system.txt  broll_director.system.txt  judge.rubric.txt  judge.system.txt  research.system.txt  scene_image_director.system.txt  script_generator.system.txt  thumbnail_director.system.txt
src/content_foundry/providers/: __init__.py  anthropic_provider.py  base.py  broll.py  faceid.py  faceswap.py  fallback.py  google_provider.py  image.py  local_provider.py  openai_provider.py  render_backend.py  sfx.py  text_normalize.py  tts.py  youtube.py  youtube_data.py
src/content_foundry/safeguards/: __init__.py  disclosure.py
src/content_foundry/templates/: definitions.py
tests/: conftest.py
tests/agent/: test_brainstorm.py  test_data_fetcher.py  test_idea_miner.py  test_judge.py  test_publisher.py  test_renderer.py  test_script_generator.py  test_visuals.py
tests/integration/: test_cost_controls.py  test_orchestrator_full.py  test_orchestrator_paths.py  test_resume_from_stage.py  test_revision_loop.py
tests/unit/: test_affiliate.py  test_artifacts.py  test_broll.py  test_broll_director.py  test_config.py  test_datasources.py  test_distill.py  test_end_screen.py  test_judge_checks.py  test_like_nudge.py  test_logging.py  test_models.py  test_notifications.py  test_overlay.py  test_package.py  test_production.py  test_providers.py  test_repository.py  test_research.py  test_safeguards.py  test_scene_image_director.py  test_search.py  test_seo.py  test_sfx.py  test_subscribe.py  test_templates.py  test_text_normalize.py  test_thumbnail_director.py  test_tiering.py  test_timebox.py  test_youtube_data.py
