[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-foundry"
version = "1.0.0"
description = "Content Foundry — a resumable multi-agent YouTube content pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Content Foundry" }]

# Authoritative dependency list lives in requirements.txt (mirrored here for installs).
dependencies = [
    "anthropic>=0.39",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ddgs>=6.0",
    "SQLAlchemy>=2.0",
    "typer>=0.12",
    "APScheduler>=3.10",
    "streamlit>=1.37",
    "tenacity>=8.5",
    "structlog>=24.1",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "python-ulid>=2.7",
    "elevenlabs>=1.5",
    "edge-tts>=6.1",
    "piper-tts>=1.2",
    "stability-sdk>=0.8",
    "Pillow>=10.4",
    "ffmpeg-python>=0.2",
    "moviepy>=1.0.3",
    "faster-whisper>=1.0",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
content-foundry = "content_foundry.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
content_foundry = ["prompts/*.txt"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
packages = ["content_foundry"]
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=content_foundry --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["content_foundry"]
branch = true
omit = [
    # Thin vendor adapter glue (network/SDK side effects) — excluded per Ch. 22.5.
    "*/providers/anthropic_provider.py",
    "*/providers/openai_provider.py",
    "*/providers/tts.py",
    "*/providers/image.py",
    "*/providers/broll.py",
    "*/providers/render_backend.py",
    "*/providers/youtube.py",
    "*/notifications/telegram.py",
    "*/scheduler.py",
    "*/cli.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
