[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-foundry"
dynamic = ["version"]
description = "A resumable multi-agent pipeline that researches, writes, judges, narrates, and renders short-form YouTube videos for any niche."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pranshu Mishra", email = "pranshumshr.04@gmail.com" }]
keywords = [
    "youtube", "video-generation", "ai-agents", "llm", "gemini",
    "content-automation", "text-to-speech", "ffmpeg", "pipeline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Lean core — everything the DEFAULT pipeline needs. Optional integrations live in the extras below
# (install on demand, e.g. `pip install content-foundry[all]`); every vendor SDK is imported lazily.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "ddgs>=6.0",
    "SQLAlchemy>=2.0",
    "typer>=0.12",
    "APScheduler>=3.10",
    "tenacity>=8.5",
    "structlog>=24.1",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "python-ulid>=2.7",
    "Pillow>=10.4",
    "ffmpeg-python>=0.2",
    "pydub>=0.25",
    "edge-tts>=6.1",
    "anthropic>=0.39",
    "openai>=1.50",
]

[project.optional-dependencies]
youtube = ["google-api-python-client>=2.140", "google-auth-oauthlib>=1.2", "google-auth-httplib2>=0.2"]
tts = ["elevenlabs>=1.5", "piper-tts>=1.2"]
image = ["stability-sdk>=0.8"]
video = ["moviepy>=1.0.3"]
whisper = ["faster-whisper>=1.0"]
dashboard = ["streamlit>=1.37"]
avatar = ["rembg>=2.0"]
clone = ["chatterbox-tts>=0.1"]
all = [
    "elevenlabs>=1.5", "piper-tts>=1.2", "stability-sdk>=0.8", "moviepy>=1.0.3",
    "faster-whisper>=1.0", "streamlit>=1.37", "rembg>=2.0",
    "google-api-python-client>=2.140", "google-auth-oauthlib>=1.2", "google-auth-httplib2>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "build>=1.2",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/pranshu97/content-foundry"
Repository = "https://github.com/pranshu97/content-foundry"
Issues = "https://github.com/pranshu97/content-foundry/issues"

[project.scripts]
content-foundry = "content_foundry.cli:app"

[tool.setuptools.dynamic]
version = { attr = "content_foundry.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
content_foundry = ["prompts/*.txt", "data/sounds/*", "py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
packages = ["content_foundry"]
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=content_foundry --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["content_foundry"]
branch = true
omit = [
    # Thin vendor adapter glue (network/SDK side effects) — excluded per Ch. 22.5.
    "*/providers/anthropic_provider.py",
    "*/providers/openai_provider.py",
    "*/providers/tts.py",
    "*/providers/image.py",
    "*/providers/broll.py",
    "*/providers/render_backend.py",
    "*/providers/youtube.py",
    "*/notifications/telegram.py",
    "*/scheduler.py",
    "*/cli.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
